Staged changes for mongodb passcode (testing) and some dependency revision